--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-# Python
+# Pythonキャッシュファイル
 __pycache__/
 *.pyc
 
-# Virtual environment
+# 仮想環境（venv）
 .venv/
 
-# Audio files
-*.mp3.DS_Store
+# 音声ファイル（自動生成される出力）
+*.mp3
+
+# macOSが自動生成する不要ファイル
+.DS_Store
